added attrib for tags code, adding links to specific tags

--- a/tag.html
+++ b/tag.html
@@ -4,6 +4,8 @@ title: Tags
 permalink: /tags/
 ---
 
+<!-- code adapted from https://codinfox.github.io/dev/2015/03/06/use-tags-and-categories-in-your-jekyll-based-github-pages/ -->
+
 {% comment%}
 Here we generate all the tags.
 {% endcomment%}
