Removed redirect for debugging

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; URL=http://cattius.com/about/">
+<!-- <meta http-equiv="refresh" content="0; URL=http://www.cattius.com/about/"> -->
